social layer introducing

--- a/backend/index.html
+++ b/backend/index.html
@@ -2,13 +2,13 @@
 <script>
         function utmx_section(){}function utmx(){}
         (function(){var k='2188815013',d=document,l=d.location,c=d.cookie;function f(n){
-        if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.indexOf(';',i);return c.substring(i+n.
-        length+1,j<0?c.length:j)}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;
-        d.write('<sc'+'ript src="'+
-        'http'+(l.protocol=='https:'?'s://ssl':'://www')+'.google-analytics.com'
-        +'/siteopt.js?v=1&utmxkey='+k+'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='
-        +new Date().valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-        '" type="text/javascript" charset="utf-8"></sc'+'ript>')})();
+                        if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.indexOf(';',i);return c.substring(i+n.
+                                        length+1,j<0?c.length:j)}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;
+                d.write('<sc'+'ript src="'+
+                'http'+(l.protocol=='https:'?'s://ssl':'://www')+'.google-analytics.com'
+                +'/siteopt.js?v=1&utmxkey='+k+'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='
+                +new Date().valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+                '" type="text/javascript" charset="utf-8"></sc'+'ript>')})();
 </script><script>utmx("url",'A/B');</script>
 <!-- End of Google Website Optimizer Control Script -->
 <html>
@@ -33,13 +33,13 @@
                          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
                          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
                          })();
-</script>
-<!-- Google Website Optimizer Tracking Script -->
+                 </script>
+                 <!-- Google Website Optimizer Tracking Script -->
 
-        </head>
-        <body>
-                <script type="text/javascript" charset="utf-8">
-                        if( !window.XMLHttpRequest ) XMLHttpRequest = function()
+         </head>
+         <body>
+                 <script type="text/javascript" charset="utf-8">
+                         if( !window.XMLHttpRequest ) XMLHttpRequest = function()
 {
         try{ return new ActiveXObject("Msxml2.XMLHTTP.6.0") }catch(e){}
         try{ return new ActiveXObject("Msxml2.XMLHTTP.3.0") }catch(e){}
@@ -345,8 +345,23 @@ var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
                         try {
                                 var gwoTracker=_gat._getTracker("UA-9005862-6");
                                 gwoTracker._trackPageview("/2188815013/test");
-                        }catch(err){}</script>
-                <!-- End of Google Website Optimizer Tracking Script -->
+                                }catch(err){}
+                </script>
+<!-- End of Google Website Optimizer Tracking Script -->
+<!-- Begin Survey.io code for . -->
+                <script src="http://cdn.survey.io/embed/1.0/survey.js" type="text/javascript"></script>
+                <script type="text/javascript" charset="utf-8">
+                        Surveyio.init({
+survey_id: "396ea",
+token: "a787ed2e15426c0d99b9b9ce5d130a20feb62c91",
+banner: {
+x: "right",
+y: "bottom",
+color: "blue"
+}
+});
+</script>
+<!-- /End Survey.io code -->
 
         </body>
 </html>
