--- a/backend/index.html
+++ b/backend/index.html
@@ -179,13 +179,14 @@ function updateDisplayEntry(response, div) {
                         link = e['l'];
                         dateUpdated = new Date(e['u']);
                         id = e['id'];
+			a = e['a'];
 
                         container = document.createElement('div');
                         containerAvatar = document.createElement('div');
 
 
                         avatarElement = document.createElement('img');
-                        avatarElement.setAttribute('src', '/static/images/noavatar.png');
+                        avatarElement.setAttribute('src', a);
                         avatarElement.setAttribute('class', 'avatar');
 
                         containerAvatar.appendChild(avatarElement);
