removing feed v1 load

--- a/backend/index.html
+++ b/backend/index.html
@@ -70,8 +70,9 @@ socket.onmessage = function(evt){
 // NOTE: we are using channel API instead of version v2 of the Feed API
 google.load('feeds', '1');
 // Set a callback to load your code when the page loads.
-google.setOnLoadCallback(init);
+//google.setOnLoadCallback(init);
 $(document).ready(function(){
+		$.get('/feed?format=json', {}, updateDisplayEntry)
                 $("#jid_result").hide();
                 //$("#invite_jid").focus();
                 //alert('instaright_id:'+com.appspot.model.account);
